--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/dodgerss.png">
+  <meta name="description" content="RESUME">
+  <meta name="author" content="862409004">
 
-  <title>John Doe - Business Administration</title>
-
+  <title>Carlos Tinoco - Business Marketing</title>
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Carlos Tinoco</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/carlostinoco.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Carlos Tinoco
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Marketing📚</div>
+        <p class="lead mb-4">My current professional experience so far consists of working at a concert venue and a retail store. Toward the end of May and start of June of 2022 I started to work at the Hollywood Bowl. The Hollywood Bowl is a concert venue that has been known for a long time. Some major concerts that had occurred while i worked there was Billie Eilish, Dave Chapelle, and others. I started off as a usher where I would welcome guests and provided seat assistance, creating a warm and organized arrival experience, verify and process tickets for venue entry, maintaining accurate crowd management and high levels of crowd control, provide clear communication to guests regarding event schedules, locations, and upcoming events, and ensure event safety by monitoring patron activity and addressing potential issues, prioritizing security and well-being. I lasted about 3 months in the usher position but then decided to switch over to being a "cushion cashier.<br><br>
 
-        Enter bio here<br><br>
+        I still worked at the Hollywood Bowl but decided to switch positions because the benefits were sounding better and the job definitely was easier. As a cushion cashier I would efficiently manage large volumes of payments and the distribution of supplies to hundreds of guests while demonstrating excellent customer service in a fast-paced environment, maintain a flawless record of accuracy, processing over 100 transactions per day with 100% accuracy, demonstrating error-free payments and change issuance, monitor concurrent guest count and coordinated transportation to prevent overcrowding and prioritize guest experience, and collaborate with the venue staff to optimize patron seating, ensuring efficient and seamless entry for a smooth audience experience. The cushion cashier position was for th e rest of the Sumer season which was June to November of 2022. The benefits that came with switching positions was a higher wage, longer paid break, not as enforced rules, and I would occasionally get tip money from patrons. It was a good idea move positions because all these benefits made work more enjoyable and influenced me to want to go to work rather than feel forced. After the season ended I decided to take a break year of working because it was my final year of High school and I really wanted to enjoy it.<br><br>
 
-        Enter bio here
+       I recently went back into the job area and went back into the Hollywood Bowl but now as a different position then any of the ones before. I became a bus dispatcher where i would mainly give park-and-ride patrons instructions as to where to go at the end of the night in order to catch their bus. After that small amount of time where the complete buses would stop arriving, my break was given to me and I would come back later at night to monitor concurrent guest count and coordinate transportation to prevent overcrowding and prioritize guest experience. This is the current job I am finishing to work at and I also decided to apply at a retail shoe store that has been a great experience so far. That is my professional bio. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/carlos-tinoco-9b76a1304?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BbFPcp6XUT4S3Dpx6bloO9g%3D%3D">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/ucr-carlos">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/dogecoin">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:ctino004@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Usher</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.hollywoodbowl.com">Hollywood Bowl</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Welcomed guests and provided seat assistance, creating a warm and organized arrival experience<br> 
+              • Verified and processed tickets for venue entry, maintaining accurate crowd management and high levels of crowd control<br>
+              • Provided clear communication to guests regarding event schedules, locations, and upcoming events<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">May 2022 - August 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.hollywoodbowl.com">Hollywood bowl</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Efficiently managed large volumes of payments and the distribution of supplies to hundreds of guests while demonstrating excellent customer service in a fast-paced environment<br>
+              • Maintained a flawless record of accuracy, processing over 100 transactions per day with 100% accuracy, demonstrating error-free payments and change issuance<br>
+              • Monitored concurrent guest count and coordinated transportation to prevent overcrowding and prioritize guest experience<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2022 - November 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Walt Disney Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://thewaltdisneycompany.com/">Walt Disney Program</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Facilitated group conversations that discussed interactive animation to encourage collaborative learning, effective communication, and idea sharing<br>
+            • Led small group project where interns would brainstorm and ideate on a digital social marketing video in support of the Disney + original series Hawkeye, meeting deadlines and exceeding expectations despite high pressure<br>
+            • Successfully and creatively solved problems via cooperative problem-solving and collaboration to identify how animation and production are related.<br>
+            • Demonstrated active listening by posing thoughtful questions to guests and actively participating in discussions<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">November 2021 - December 2021</span>
           </div>
         </div>
 
@@ -156,29 +157,7 @@
             <div>MBA in International Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2023 - June 2027</span>
           </div>
         </div>
 
@@ -191,7 +170,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/firstworkpicc.jpeg" width="500px">
+            <img src="img/secondworkpicc.jpeg" width="500px"><br>
+            <img src="img/thirdworkpicc.jpeg" width="500px">
+            <img src="img/fourthworkpicc.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +181,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Carlos Tinoco</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
